# cocoon-kitchen

./: .env.example  .envrc  .gitignore  CLAUDE.md  README.md  app.py  console.py  pyproject.toml
ai_docs/: architecture.md  cleanplate_product.md  cocoonkitchen_product.md  design_system.md  golden_draft_handoff.md  llm_contracts.md  pitfalls.md  safety.md  working_sprint.md
evals/: backlog.jsonl  baseline.json  evaluate.py  golden_drafts.jsonl  golden_set.csv  providers.py  run_log.csv  runlog.py
rubric/: lexicons.yaml  rubric.md  rubric.yaml
samples/: frenchonionsoupingredients.txt
src/clean_recipe/: __init__.py  cli.py  client.py  golden.py  lexicons.py  log.py  parse.py  prompt.py  schema.py  score.py
tests/: test_app.py  test_client.py  test_console.py  test_evaluate.py  test_golden.py  test_lexicons.py  test_log.py  test_parse.py  test_prompt.py  test_providers.py  test_rubric.py  test_runlog.py  test_schema.py  test_score.py
