[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cocoonkitchen"
version = "0.1.0"
description = "LLM-powered recipe clean-eating scorer"
requires-python = ">=3.11"
# Pinned, phase-scoped (anti-bloat: no dependency before a phase uses it).
# Phase 1: pydantic (schema), pyyaml (rubric). Phase 2 adds the model call:
# openai (provider-neutral OpenAI-compatible client seam) + python-dotenv
# (entrypoints load .env; the pure core reads os.environ). recipe-scrapers
# arrives with Track A. Streamlit arrives in Phase 3.
dependencies = [
    "pydantic==2.10.6",
    "pyyaml==6.0.2",
    "openai==2.45.0",
    "python-dotenv==1.2.2",
    "recipe-scrapers==15.11.0",
    "requests==2.34.2",  # parse.py fetches recipe URLs directly (SSRF-guarded)
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
